--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
           <img src="images/man.png" alt="picture of a man" class="man">
           <h2>Hey There!</h2>
-          <p>As you already know my name is Lawrence and I am learning fullstack web development.</p>
+          <p>My name is Lawrence and I am learning fullstack web development.</p>
         </div>
 
         <hr>
@@ -34,12 +34,12 @@
           <div class="skill-row">
             <img class="html-skill-icon" src="images/html-icon.png" alt="html-5">
             <h3>HTML</h3>
-            <p class="html-paragragh">I've gotten good at Html and I now know the appropriate tags to use in certain places so that your website functions the way it should be.</p>
+            <p class="html-paragragh">I've gotten good at Html and I know the appropriate tags to use in certain places so that your website functions the way it should be.</p>
           </div>
           <div class="skill-row">
             <img class="css-skill-icon" src="images/css-icon.png" alt="css-3">
             <h3>CSS</h3>
-            <p class="css-paragragh">I've gotten really good at css and I can style a webpage or website to a reasonable point.</p>
+            <p class="css-paragragh">I've gotten really good at CSS and I can style a webpage or website to a reasonable point.</p>
           </div>
         </div>
 
@@ -47,8 +47,8 @@
 
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>If you want to hire me or you want to work on a project together.</h3>
-          <p>I love working in teams, it's really fun. You can also contact me if you need any help we anything, i'll be happy to assist if i've got time</p>
+          <h3>If you would like to hire me or you want us to work together on your project.</h3>
+          <p>I love working in teams, it's really fun. You can also contact me if you need help with anything, i'll be very happy to assist</p>
           <a class="btn" href="mailto:greatlaw2@gmail.com">CONTACT ME</a>
         </div>
         
